Get Navbar collapse to basic working state. Fix current console errors

--- a/reddit/src/Features/navbar/navbar.css
+++ b/reddit/src/Features/navbar/navbar.css
@@ -17,3 +17,12 @@
   margin: 0;
 }
 
+.me-auto {
+  display: flex;
+  align-items: center;
+}
+
+
+
+
+
