--- a/reddit/src/Features/searchBar/searchBar.css
+++ b/reddit/src/Features/searchBar/searchBar.css
@@ -3,6 +3,9 @@
   border-radius: 2px;
 }
 
+#searchbar {
+  margin-left: 20px;
+}
 
 
 
